# portcast-quota-metering

./: .dockerignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: config.py  db.py  main.py
app/api/: admin_routes.py  consumer_routes.py  quota_routes.py
app/quota/: period.py  repository.py  service.py
migrations/: 001_init.sql  002_seed.sql
scripts/: benchmark_api.py  benchmark_quota.py  cleanup_expired_reservations.py  load_test_api.py  load_test_quota.py
tests/: conftest.py  test_api.py  test_concurrency.py  test_period.py  test_quota_integration.py
