[project]
name = "portcast-quota-metering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.137.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "sqlalchemy>=2.0.51",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
